--- a/index_main.html
+++ b/index_main.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<!--navagation bar -->
-		<nav class="navbar navbar-default" id="navbar"> 
+		<nav class="navbar navbar-default navbar-fixed-top" id="navbar"> 
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
@@ -27,7 +27,7 @@
 					<a href="index_main.html" class="btn btn-default navbar-btn">How To</a>
 					<a href="index_features.html" class="btn btn-default navbar-btn">Features</a>
 					<a href="index_integration.html" class="btn btn-default navbar-btn">Integration</a>
-					<a href="index_caution.html" class="btn btn-default navbar-btn">Caution</a>
+					<!--<a href="index_caution.html" class="btn btn-default navbar-btn">Caution</a>-->
 					<a href="https://swapi.co/" class="btn btn-info navbar-btn navbar-right">SWAPI</a>
 				</div>
 			</div>
@@ -82,13 +82,14 @@ http://swapi.co/api/vehicles/</code>
 				</div>
 			</section>
 		</div>
-<!--		
-	<footer class="bs-docs-footer-default">
-		<div class="container">
-			<p>footer	</p>
+	<!--Footer-->
+	<footer class="bs-docs-footer-inverse">
+		<div class="container text-center">
+			<p>Created By: Ian Buchanan</p>
+			<p>Student at Oregon State University</p>
 		</div>
-	</footer>
--->		
+	</footer> <!--end footer-->
+	
 		
 		
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
